fix: fix z-index from header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
 app-header {
   position: fixed;
+  z-index: 20;
 }
